--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 // ============================================
-// D-Pharmasy Global Styles
+// Pakistan Trace Pharma Global Styles
 // ============================================
 
 @import './styles/variables.scss';
