--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 // ============================================
-// D-Pharmasy SCSS Mixins
+// Pakistan Trace Pharma SCSS Mixins
 // ============================================
 
 @import './variables.scss';
