fix: update logo image source path in home header.

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -3,7 +3,7 @@
     <header class="main-header">
         <div class="container header-container">
             <div class="logo">
-                <img src="assets/logo-full.png" alt="Pakistan Trace Pharma" height="40">
+                <img src="/D-pharmasy/assets/logo-full.png" alt="Pakistan Trace Pharma" height="40">
             </div>
             <!-- Future nav items can go here -->
         </div>
