--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,8 +2,9 @@
     <!-- Navigation/Header -->
     <header class="main-header">
         <div class="container header-container">
-            <div class="logo">
-                <img src="assets/logo-full.png" alt="Pakistan Trace Pharma" height="40">
+            <div class="logo-text">
+                <span class="brand-icon material-icons">local_pharmacy</span>
+                <span class="brand-name">Pakistan <span class="accent">Trace</span> Pharma</span>
             </div>
             <!-- Future nav items can go here -->
         </div>
